@@ -3,6 +3,7 @@
   * Allow -fomit-frame-pointer on gcc versions >= 3.3.1. (Frederick Bruckman, me)
   * Add maxheaders .ngetrc option to limit the number of headers that will be retrieved/stored. (Frederick Bruckman, me)
   * Reduce memory usage by using vectors rather than maps for some data structures that usually do not have many elements anyway. (Dieter Shirley)
+  * Use netbsd-style termcap for line clearing when available, fixes problems with progress lines getting overwritten on netbsd systems. (Frederick Bruckman, me)
 
 2004-12-20 v0.27.1:
   * Fix error in configure script when printing exceptions not found message, due to unquoted string. (Reported by M.J. Soft)
